Fixed issue with images overflowing horizontally on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,7 +58,8 @@ blockquote p {
 img {
     display: block;
     margin: 40px 0;
-    max-width: 809px;
+    width: 100%;
+        max-width: 809px;
 }
 
 pre {
